plugins {
    // the logic is only applied to projects having the java-library plugin applied - take it here instead
    id 'java-library'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile).configureEach {
    options.warnings = true
    options.encoding = 'UTF-8'

    // Since JDK 17 the default access to the following
    // packages is "deny". We need to open them in order
    // to gain access in GDS / Neo4j.
    options.forkOptions.jvmArgs += '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED'
    options.forkOptions.jvmArgs += '--add-opens=java.base/java.nio=ALL-UNNAMED'
    options.forkOptions.jvmArgs += '--add-opens=java.base/java.util.stream=ALL-UNNAMED'
    options.forkOptions.jvmArgs += '--add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED'
    options.forkOptions.jvmArgs += '--add-opens=java.base/java.lang=ALL-UNNAMED'

    options.compilerArgs += [
        '-parameters',
        '-Xlint:all,-cast,-deprecation,-processing,-serial,-try,-unchecked,-varargs,-rawtypes,-removal',
        '-Xmaxerrs', '1337'
    ]
}

tasks.withType(Jar).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

//This is temporary until arrow updates
//https://docs.gradle.org/current/userguide/dependency_constraints.html
dependencies {
    constraints {
        implementation("com.fasterxml.jackson.core:jackson-databind:2.21.5") {
            because "overriding vulnerable version 2.21.0 from arrow-vector"
        }
        implementation("com.fasterxml.jackson.core:jackson-core:2.21.5") {
            because "overriding vulnerable version 2.21.0 from arrow-vector"
        }

    }
}
